ERRORS.txt
matt@HungLoDE:~/Documents/Repos/Mattcraft$ ./gradlew build
Path for java installation '/usr/lib/jvm/openjdk-17' (Common Linux Locations) does not contain a java executable
Path for java installation '/usr/lib/jvm/openjdk-21' (Common Linux Locations) does not contain a java executable
/home/matt/Documents/Repos/Mattcraft/net/minecraft/world/level/levelgen/placement/NoiseBasedCountPlacement.java:35: warning: [removal] BIOME_INFO_NOISE in Biome has been deprecated and marked for removal
                double d = Biome.BIOME_INFO_NOISE.getValue(blockPos.getX() / this.noiseFactor, blockPos.getZ() / this.noiseFactor, false);
                                ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/world/level/levelgen/placement/NoiseThresholdCountPlacement.java:35: warning: [removal] BIOME_INFO_NOISE in Biome has been deprecated and marked for removal
                double d = Biome.BIOME_INFO_NOISE.getValue(blockPos.getX() / 200.0, blockPos.getZ() / 200.0, false);
                                ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/world/level/block/entity/TheEndGatewayBlockEntity.java:228: warning: [removal] getHighestSectionPosition() in ChunkAccess has been deprecated and marked for removal
                int i = levelChunk.getHighestSectionPosition() + 16 - 1;
                                  ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:99: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, k, i, m, 0.0F, h, h, 0.0F, t, 0.0F, 0.0F, w, 0.0F, 1.0F, aa, z)
                                                                                                              ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:99: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, k, i, m, 0.0F, h, h, 0.0F, t, 0.0F, 0.0F, w, 0.0F, 1.0F, aa, z)
                                                                                                                                            ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:99: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, k, i, m, 0.0F, h, h, 0.0F, t, 0.0F, 0.0F, w, 0.0F, 1.0F, aa, z)
                                                                                                                                                ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:113: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, ARGB.color(32, k), i, m, p, q, l, s, t, l, l, l, 0.0F, 1.0F, aa, z)
                                                                                                            ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:113: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, ARGB.color(32, k), i, m, p, q, l, s, t, l, l, l, 0.0F, 1.0F, aa, z)
                                                                                                                     ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:113: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, ARGB.color(32, k), i, m, p, q, l, s, t, l, l, l, 0.0F, 1.0F, aa, z)
                                                                                                                        ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:113: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, ARGB.color(32, k), i, m, p, q, l, s, t, l, l, l, 0.0F, 1.0F, aa, z)
                                                                                                                                                ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/client/renderer/blockentity/BeaconRenderer.java:113: error: local variables referenced from a lambda expression must be final or effectively final
                        (pose, vertexConsumer) -> renderPart(pose, vertexConsumer, ARGB.color(32, k), i, m, p, q, l, s, t, l, l, l, 0.0F, 1.0F, aa, z)
                                                                                                                                                    ^
/home/matt/Documents/Repos/Mattcraft/net/minecraft/util/datafix/fixes/ChunkBedBlockEntityInjecterFix.java:43: error: incompatible types: inference variable A has incompatible equality constraints Pair<String,?>,Pair<CAP#1,?>
                        this.fixTypeEverywhere(
                                              ^
  where A,B are type-variables:
    A extends Object declared in method <A,B>fixTypeEverywhere(String,Type<A>,Type<B>,Function<DynamicOps<?>,Function<A,B>>)
    B extends Object declared in method <A,B>fixTypeEverywhere(String,Type<A>,Type<B>,Function<DynamicOps<?>,Function<A,B>>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
error: incompatible types: incompatible parameter types in lambda expression
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
10 errors
4 warnings
> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1m 9s
1 actionable task: 1 executed
matt@HungLoDE:~/Documents/Repos/Mattcraft$



